--- a/실기-문제/A-2-Green복지재단/html/index.html
+++ b/실기-문제/A-2-Green복지재단/html/index.html
@@ -77,7 +77,7 @@
         </div>
         <main>
             <section class="sec-g sec-bbs">
-                <div class="sec-tit">공지사항</div>
+                <h2 class="sec-tit">공지사항</h2>
                 <div class="sec-cont">
                     <ul class="lst-bbs">
                         <li>
@@ -100,7 +100,7 @@
                 </div>
             </section>
             <section class="sec-g sec-gallery">
-                <div class="sec-tit">갤러리</div>
+                <h2 class="sec-tit">갤러리</h2>
                 <div class="sec-cont">
                     <ul class="lst-gallery">
                         <li>
@@ -129,7 +129,7 @@
                 </div>
             </section>
             <section class="sec-g sec-bnr">
-                <div class="blind">홍보 배너</div>
+                <h2 class="blind">홍보 배너</h2>
                 <div class="sec-cont">
                     <img src="./images/bnr.png" alt="">
                 </div>
@@ -151,6 +151,16 @@
                 <a href="#">유니세프</a>
             </div>
         </footer>
+    </div>
+
+    <div id="modal" class="modal-dimmed">
+        <div class="modal-box">
+            <h2 class="modal-tit">modal title</h2>
+            <div class="modal-cont">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, maiores.
+            </div>
+            <button class="btn-close">닫기</button>
+        </div>
     </div>
     
 </body>
