--- a/실기-문제/A-2-Green복지재단/html/index.html
+++ b/실기-문제/A-2-Green복지재단/html/index.html
@@ -81,7 +81,7 @@
                 <div class="sec-cont">
                     <ul class="lst-bbs">
                         <li>
-                            <a href="#">종합소득세 관련 기부금영수증 발급 안내</a>
+                            <a href="javascript:void(0)">종합소득세 관련 기부금영수증 발급 안내</a>
                         </li>
                         <li>
                             <a href="#">유니세프한국위원회 2021년 브랜드 캠페인 대행 업체 입찰 공고</a>
@@ -159,7 +159,7 @@
             <div class="modal-cont">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, maiores.
             </div>
-            <button class="btn-close">닫기</button>
+            <button class="btn-close">X</button>
         </div>
     </div>
     
