--- a/실기-완성/D-1-조이컨트리클럽/index.html
+++ b/실기-완성/D-1-조이컨트리클럽/index.html
@@ -19,15 +19,15 @@
           </h1>
           <nav id="gnb">
             <ul class="depth1">
-              <li>
-                <a href="#">CLUB</a>
+              <li class="active">
+                <a href="javascript:void(0)" class="link-depth1">CLUB</a>
                 <ul class="depth2">
                   <li><a href="#">클럽소개</a></li>
                   <li><a href="#">시설안내</a></li>
                 </ul>
               </li>
               <li>
-                <a href="#">BOOKING</a>
+                <a href="javascript:void(0)" class="link-depth1">BOOKING</a>
                 <ul class="depth2">
                   <li><a href="#">요금안내</a></li>
                   <li><a href="#">예약안내</a></li>
@@ -35,7 +35,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">INFORMATION</a>
+                <a href="javascript:void(0)" class="link-depth1">INFORMATION</a>
                 <ul class="depth2">
                   <li><a href="#">명예의 전당</a></li>
                   <li><a href="#">이벤트</a></li>
@@ -44,7 +44,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#">COMMUNITY</a>
+                <a href="javascript:void(0)" class="link-depth1">COMMUNITY</a>
                 <ul class="depth2">
                   <li><a href="#">공지사항</a></li>
                   <li><a href="#">Q&A</a></li>
@@ -55,10 +55,48 @@
 
           <div class="util">
             <a href="#">spotMenu1</a>
+            <!-- <span>|</span> -->
             <a href="#">spotMenu2</a>
           </div>
         </header>
-        <main>main</main>
+        <main>
+          <nav class="quick">
+            <a href="#">
+              <img
+                src="https://images.unsplash.com/photo-1679731480444-4aa7173423b9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDExfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60"
+                alt=""
+              />
+              quick1
+            </a>
+
+            <a href="#">
+              <img
+                src="https://images.unsplash.com/photo-1674493358698-09aaf0e01b71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDJ8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                alt=""
+              />
+              quick2
+            </a>
+
+            <a href="#">
+              <img
+                src="https://images.unsplash.com/photo-1675750317991-26b1183e87fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDd8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                alt=""
+              />
+              quick3
+            </a>
+          </nav>
+          <div class="slide">
+            <ul>
+              <li>
+                <a href="#">
+                  <img src="" alt="" />
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="banner">banner</div>
+          <div class="tabs-wrap">tab 2</div>
+        </main>
       </div>
       <footer>footer</footer>
     </div>
