--- a/실기-완성/D-1-조이컨트리클럽/index.html
+++ b/실기-완성/D-1-조이컨트리클럽/index.html
@@ -89,7 +89,23 @@
             <ul>
               <li>
                 <a href="#">
-                  <img src="" alt="" />
+                  <img src="./images/slide1.jpg" alt="VALLEY FESTIVAL 2021" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/slide2.jpg"
+                    alt="Bristol’s Lakeside Food and Music Festival"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="./images/slide3.jpg"
+                    alt="Bristol’s Best-Tasting Music Festival"
+                  />
                 </a>
               </li>
             </ul>
